User: fix messages, password alignment

--- a/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
@@ -87,7 +87,7 @@
       <div class="form-group" ng-if="model.$promise">
         <label class="col-sm-4" for="givenName" translate>user.password</label>
         <a href="/ldapadmin/account/passwordRecovery?email={{user.user.mail | encodeURIComponent}}"
-          target="_blank" class="col-sm-8">
+          target="_blank" class="col-sm-8 password">
           <span translate>user.reset</span>
           <i class="glyphicon glyphicon-new-window"></i>
         </a>
