Group creation + refactoring

--- a/ldapadmin/src/main/webapp/console/app/components/groups/groups.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/groups/groups.tpl.html
@@ -4,7 +4,7 @@
     <hr>
     <div class="create-btn">
       <a ng-link="newUser" class="btn btn-default" translate>group.newuser</a>
-      <a href="" class="btn btn-default" translate>group.newgroup</a>
+      <a ng-click="groups.createGroup()" class="btn btn-default" translate>group.newgroup</a>
     </div>
   </div>
 
