--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -11,6 +11,9 @@ body {
 a {
   color : $lightblue;
 }
+.btn-primary {
+  background-color : $lightblue;
+}
 
 groups {
   input {
@@ -206,6 +209,29 @@ section {
     top      : 0.7em;
     &:hover {
       cursor: pointer;
+    }
+  }
+  .background {
+    position        : absolute;
+    top             : 0;
+    bottom          : 0;
+    left            : 0;
+    right           : 0;
+    display         : flex;
+    align-items     : center;
+    justify-content : center;
+    background      : rgba(255,255,255,.65);
+    z-index         : 100;
+    .panel {
+      width      : 40em;
+      box-shadow : 0 0 5em rgba(0,0,0,.4);
+    }
+    .panel-body {
+      min-height : 8em;
+    }
+    .close {
+      margin-top   : -.4em;
+      margin-right : -.4em;
     }
   }
 }
