Avoid home FOUT

--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="jumbotron">
-      <h1>{{::home.connected.results.length}}</h1>
+      <h1 ng-cloack>{{::home.connected.results.length}}</h1>
       <p translate>home.connected</p>
       <table class="table table-condensed">
         <thead>
