Fix logs loading

--- a/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/user/user.tpl.html
@@ -175,7 +175,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr dir-paginate="log in user.logs | itemsPerPage: 2">
+            <tr dir-paginate="log in user.logs.logs | itemsPerPage: 2">
               <td>{{::log.date | date: 'mediumDate'}}</td>
               <td>{{::log.admin}}</td>
               <td>{{::log.type}}</td>
