--- a/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
@@ -1,6 +1,6 @@
 <section class="users">
 
-  <groups class="col-md-4 groups" groups="users.groups" active-group="users.activeGroup"></groups>
+  <groups class="col-md-4 groups" groups="users.groups" active-promise="users.activePromise"></groups>
 
   <div class="col-md-8">
 
