Fix pagination color

--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -64,6 +64,9 @@ section {
   cursor  : pointer;
   padding : 6px 9px;
 }
+.pagination > .active > a {
+  background: $lightblue;
+}
 
 // ANALYTICS
 .analytics {
