Analytics button title i18n

--- a/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
@@ -1,10 +1,10 @@
 <div class="stats">
 
   <div class="btn-group pull-right" role="group">
-    <button ng-click="stats.switchView()" type="button" class="btn btn-default" ng-class="{'active': stats.view =='graph'}">
+    <button ng-click="stats.switchView()" type="button" class="btn btn-default" ng-class="{'active': stats.view =='graph'}" title="{{'analytics.graphview' | translate}}">
       <i class="glyphicon glyphicon-stats"></i>
     </button>
-    <button ng-click="stats.switchView()" type="button" class="btn btn-default" ng-class="{'active': stats.view =='table'}">
+    <button ng-click="stats.switchView()" type="button" class="btn btn-default" ng-class="{'active': stats.view =='table'}" title="{{'analytics.dataview' | translate}}">
       <i class="glyphicon glyphicon-th-list"></i>
     </button>
   </div>
