Add hidden mail column to users list

--- a/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/users/users.tpl.html
@@ -17,6 +17,7 @@
           <th>User</th>
           <th>Login</th>
           <th>Organisation</th>
+          <th>Mail</th>
         </tr>
       </thead>
 
@@ -27,6 +28,7 @@
           </td>
           <td>{{::user.uid}}</td>
           <td>{{::user.o}}</td>
+          <td>{{::user.mail}}</td>
         </tr>
       </tbody>
 
