--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -214,6 +214,10 @@ section {
       cursor: pointer;
     }
   }
+  th:last-child,
+  td:last-child {
+    display: none;
+  }
   .background {
     position        : absolute;
     top             : 0;
