Take granularity into account for building graphs labels

--- a/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/stats/stats.tpl.html
@@ -30,4 +30,8 @@
     </tr>
   </table>
 
+  <p class="text-center" ng-if="stats.data.granularity">
+    {{'analytics.' + stats.data.granularity | translate}}
+  </p>
+
 </div>
