--- a/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/components/home/home.tpl.html
@@ -47,7 +47,7 @@
 
   <div class="col-md-8">
 
-    <stats data="home.requests" type="'line'" config="home.requests_conf" title="'analytics.requests'"></stats>
+    <stats data="home.requests" type="'line'" config="['date', 'count']" title="'analytics.requests'"></stats>
 
     <h3 translate>home.logs</h3>
 
