Plug contexts to real service

--- a/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
+++ b/ldapadmin/src/main/webapp/console/app/templates/userForm.tpl.html
@@ -75,8 +75,10 @@
       <div class="form-group form-group-sm">
         <label class="col-sm-4" for="preferredLanguage" translate>user.context</label>
         <div class="col-sm-8">
-          <input ng-model="model.preferredLanguage" class="form-control" id="preferredLanguage"
-          placeholder="preferredLanguage">
+          <select class="form-control" id="contexts" ng-model="user.user.preferredLanguage" >
+            <option value="" translate>user.lastcontext</option>
+            <option value="{{context.wmc}}" ng-repeat="context in user.contexts">{{context.label}}</option>
+          </select>
         </div>
       </div>
 
